crates/oxc_react_compiler/tests/snapshots/error.invalid-non-imported-reanimated-shared-value-writes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-non-imported-reanimated-shared-value-writes.jsx
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("`sharedVal` cannot be modified"), span: SourceSpan { offset: 255, length: 9 }, primary: false }], help: Some("Modifying a value returned from a hook is not allowed. Consider moving the modification into the hook where the value is constructed"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
