crates/oxc_react_compiler/tests/snapshots/error.invalid-property-store-to-frozen-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-property-store-to-frozen-value.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 86, end: 87 }, primary: false }], help: Some("Modifying a value used previously in JSX is not allowed. Consider moving the modification before the JSX"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
